# ar-translate

./: .gitignore  Cargo.toml  LICENSE.md  README-de.md  README.md  install.sh  set_env.sh-example
.github/: copilot-instructions.md
src/: app.rs  app_settings.rs  azure.rs  cli.rs  main.rs  markdown.rs  translator.rs
