[package]
name = "ar-translate"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6.0", features = ["derive"] }
walkdir = "2.5"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.51.1", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1.0.149"
